# algo

./: .dockerignore  .drone.yml  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml  main.py  pa.pine  pyproject.toml  test_colored_logs.py
src/: main.py
src/analysis/: price_action.py  price_action_pipeline.py
src/backtesting/: backtest_adapter.py  engine.py  pa_strategy.py
src/config/: config.py
src/core/: types.py
src/data/: alpaca_loader.py
src/execution/: alpaca_trader.py
src/models/: market_data.py  strategy_data.py
src/monitor/: data.py  service.py  web_server.py
src/monitor/static/: app.js  style.css
src/monitor/templates/: dashboard.html
src/risk/: __init__.py  position_sizer.py  risk_manager.py
src/strategies/: pa_strategy.py
src/strategy/: execution_engine.py  price_action_analyzer.py  strategy_engine.py
src/utils/: data_transforms.py  events.py  log.py  logger_setup.py  redis_client.py
