[project]
name = "algo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.42.1",
    "arrow>=1.3.0",
    "logbook>=1.8.2",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "redis>=5.0.1",
    "rich>=14.1.0",
    "scipy>=1.16.2",
    "ta-lib>=0.6.7",
]
